--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="container">
       <div class="inner">
 
-        <header>
-          <h1>Barxtemp</h1>
+        <header style="text-align: center;"
+          <h1>barXtemp</h1>
           <h2></h2>
         </header>
 
@@ -33,8 +33,12 @@
         <section id="main_content">
 
 
-<p>This is a simple **OS X app** to get the computer temperature. The app is accessible from the Systray and shows the CPU
+<p>This is a simple <b>OS X app</b> to get the computer temperature. The app is accessible from the Systray and shows the CPU
 temperature, the speed of the fans and the temperature of the battery</p>
+
+<p style="text-align: center;">
+  <img src="images/ScreenShot.png"></img>
+</p>
 
 
 
