--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <div class="inner">
 
-        <header style="text-align: center;"
+        <header style="text-align: center;">
           <h1>barXtemp</h1>
           <h2></h2>
         </header>
