--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ temperature, the speed of the fans and the temperature of the battery</p>
 
         </section>
         
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/Gabriele91/barXtemp/releases/download/1.0/barXtemp.app.zip" id="download-zip" class="button"><span>Download .app.zip</span></a>
+        <section id="downloads" class="clearfix" style="text-align: center;">
+          <a href="https://github.com/Gabriele91/barXtemp/releases/download/1.0/barXtemp.app.zip" id="download-zip" class="button"><span>Download .app</span></a>
         </section>
 
         <footer>
