--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@ temperature, the speed of the fans and the temperature of the battery</p>
 
 <p style="text-align: center;">
   <img src="images/ScreenShot.png"></img>
-  <a href="https://github.com/Gabriele91/barXtemp/releases/download/1.0/barXtemp.app.zip" id="download-zip" class="button"><span>Download .app</span></a>
 </p>
 
 
 
+        </section>
+        <section id="downloads" class="clearfix">
+          <a style="text-align: center; float:none; margin:auto;" href="https://github.com/Gabriele91/barXtemp/releases/download/1.0/barXtemp.app.zip" id="download-zip" class="button"><span>Download .app</span></a>
         </section>
 
         <footer>
