--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ temperature, the speed of the fans and the temperature of the battery</p>
 
         </section>
         <section id="downloads" class="clearfix">
-          <a style="text-align: center; float:none; margin:auto;" href="https://github.com/Gabriele91/barXtemp/releases/download/1.0/barXtemp.app.zip" id="download-zip" class="button"><span>Download .app</span></a>
+          <a style="float:none; margin:auto;" href="https://github.com/Gabriele91/barXtemp/releases/download/1.0/barXtemp.app.zip" id="download-zip" class="button"><span>Download .app</span></a>
         </section>
 
         <footer>
