--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 temperature, the speed of the fans and the temperature of the battery</p>
 
 <p style="text-align: center;">
-  <img src="images/ScreenShot.png"></img>
-  <img src="images/ScreenShot_1.png"></img>
-  <img src="images/ScreenShot_2.png"></img>
+  <img class="screenshot" src="images/ScreenShot.png"></img>
+  <img class="screenshot" src="images/ScreenShot_1.png"></img>
+  <img class="screenshot" src="images/ScreenShot_2.png"></img>
 </p>
 
 
