--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <![endif]-->
     <title>Barxtemp by Gabriele91</title>
   </head>
+  
+  <style type="text/css">
+  .multiImage 
+  {
+    border-radius:10px;
+    border: solid 2px rgb(128,128,128); 
+    padding: 10px;
+    background: #000;
+  }
+  </style>
 
   <body>
     <div id="container">
@@ -36,13 +46,11 @@
 <p>This is a simple <b>OS X app</b> to get the computer temperature. The app is accessible from the Systray and shows the CPU
 temperature, the speed of the fans and the temperature of the battery</p>
 
-<p style="text-align: center;">
-  <img class="screenshot" src="images/ScreenShot.png"></img>
-  <img class="screenshot" src="images/ScreenShot_1.png"></img>
-  <img class="screenshot" src="images/ScreenShot_2.png"></img>
-</p>
-
-
+        <p id="imageList"  style="text-align: center;" >
+          <img class="screenshot multiImage" src="images/ScreenShot.png"></img>
+          <img class="screenshot multiImage" src="images/ScreenShot_1.png"></img>
+          <img class="screenshot multiImage" src="images/ScreenShot_2.png"></img>
+        </p>
 
         </section>
         <section id="downloads" class="clearfix">
@@ -58,4 +66,39 @@ temperature, the speed of the fans and the temperature of the battery</p>
       </div>
     </div>
   </body>
+
+  <script type="text/javascript">
+
+  window.onload = function() 
+  {
+    //get image list
+    var imageList=document.getElementById("imageList");
+    //get elements
+    var images=imageList.getElementsByTagName("img");
+    //if have some images
+    if(images && images.length)
+    {
+      //first id
+      var imageCurrent = 0;
+      //hide all
+      for( var key=0; key != images.length; ++key )
+      {
+         images[key].style.display = "none";
+      }
+      //show first
+      images[imageCurrent].style.display = "block";
+      //change image event
+      imageList.onclick = function()
+      {
+          if(images)
+          { 
+              images[imageCurrent].style.display = "none";
+              imageCurrent = (imageCurrent+1) % images.length;
+              images[imageCurrent].style.display = "block";
+          }
+      }
+    }
+  }
+
+  </script>
 </html>
