Added an other image.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ temperature, the speed of the fans and the temperature of the battery</p>
           <img class="screenshot multiImage" src="images/ScreenShot.png"></img>
           <img class="screenshot multiImage" src="images/ScreenShot_1.png"></img>
           <img class="screenshot multiImage" src="images/ScreenShot_2.png"></img>
+          <img class="screenshot multiImage" src="images/ScreenShot_3.png"></img>
         </p>
 
         </section>
