--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 <p>This is a simple <b>OS X app</b> to get the computer temperature. The app is accessible from the Systray and shows the CPU
-temperature, the speed of the fans and the temperature of the battery</p>
+temperature, the integrated GPU temperature (if available), the speed of the fans and the temperature of the battery</p>
 
         <p id="imageList">
           <img class="screenshot multiImage" src="images/ScreenShot.png"></img>
