--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <hr>
 
-        <section id="main_content">
+        <section class="centered_content">
 
 
 <p>This is a simple <b>OS X app</b> to get the computer temperature. The app is accessible from the Systray and shows the CPU
@@ -46,7 +46,11 @@ temperature, the integrated GPU temperature (if available), the speed of the fan
 
         </section>
         <section id="downloads" class="clearfix">
-          <a id="download-app" href="https://github.com/Gabriele91/barXtemp/releases/download/1.3.1/barXtemp.app.zip" class="button"><span>Download .app</span></a>
+          <p><a id="download-app" href="https://github.com/Gabriele91/barXtemp/releases/download/1.3.1/barXtemp.app.zip" class="button"><span>Download .app</span></a></p>
+          <p class="centered_content">If you have already installed <a href="http://brew.sh/">Homebrew</a> and <a href="http://caskroom.io/">Homebrew Cask</a> you can install it using the following command:</p>
+          <div class="centered_content">
+            <pre class="pre_code"><code><span class="nv">$ </span>brew cask install barxtemp</code></pre>
+          </div>
         </section>
 
         <footer>
